<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Registro de usuarios</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="hayConexion">¿Está conectado?</string>
    <string name="tvNombreTxt">Nombre:</string>
    <string name="etNombreTxt">Nombre</string>
    <string name="tvEmailTxt">Email:</string>
    <string name="etEmailTxt">x@y.com</string>
    <string name="tvPasswordTxt">Password</string>
    <string name="btnenviarTxt">Enviar</string>
    <string name="btnregistradoTxt">¿Ya estás registrado?</string>
    <string name="btnmodificarTxt">Modificar</string>
    <string name="btnborrarTxt">Borrar</string>
    <string name="title_activity_ingresar_email">Ingresar Usuario</string>
    <string name="title_activity_modificar_usuario">Modificar Usuario</string>
    <string name="title_activity_usuario_modificado">UsuarioModificadoActivity</string>

</resources>
