<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     
      <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
 
       <TextView
            android:id="@+id/tvNombre"   
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreTxt"
            android:layout_alignBaseline="@+id/etNombre"/>
       <EditText
            android:id="@+id/etNombre"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/etNombreTxt"
            android:layout_toRightOf="@+id/tvNombre"/>
       <TextView
            android:id="@+id/tvEmail"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNombre"
            android:text="@string/tvEmailTxt"
            android:layout_alignBaseline="@+id/etEmail"/>
       <EditText
            android:id="@+id/etEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/etEmailTxt"
            android:layout_toRightOf="@+id/tvEmail"
            android:layout_below="@+id/etNombre"/>
       <TextView
            android:id="@+id/tvPassword"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmail"
            android:text="@string/tvPasswordTxt"
            android:layout_alignBaseline="@+id/etPassword"/>
       <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_toRightOf="@+id/tvPassword"
            android:layout_below="@+id/etEmail"/>
   </RelativeLayout>
   
      <Button
       android:id="@+id/btnEnviar"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:text="@string/btnenviarTxt"
       android:onClick="guardarDatos"/>
      
      <Button
       android:id="@+id/btnRegistrado"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:text="@string/btnregistradoTxt"
       android:onClick="yaRegistrado"/>
     
</LinearLayout >
