<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     
      <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
 
       <TextView
            android:id="@+id/tvNombre_3"   
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreTxt"
            android:layout_alignBaseline="@+id/etNombre_3"/>
       <EditText
            android:id="@+id/etNombre_3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/etNombreTxt"
            android:layout_toRightOf="@+id/tvNombre_3"/>
       <TextView
            android:id="@+id/tvEmail_3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNombre_3"
            android:text="@string/tvEmailTxt"
            android:layout_alignBaseline="@+id/etEmail_3"/>
       <EditText
            android:id="@+id/etEmail_3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/etEmailTxt"
            android:layout_toRightOf="@+id/tvEmail_3"
            android:layout_below="@+id/etNombre_3"/>
       <TextView
            android:id="@+id/tvPassword_3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmail_3"
            android:text="@string/tvPasswordTxt"
            android:layout_alignBaseline="@+id/etPassword_3"/>
       <EditText
            android:id="@+id/etPassword_3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_toRightOf="@+id/tvPassword_3"
            android:layout_below="@+id/etEmail_3"/>
   </RelativeLayout>
   	  
   	  <TextView
        android:id="@+id/mensajeServidor_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#CC0033"
        android:textSize="16sp"
        android:textStyle="bold" />
   
      <Button
       android:id="@+id/btnModificar"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:text="@string/btnmodificarTxt"
       android:onClick="modificarDatos"/>
      
      <Button
       android:id="@+id/btnBorrar"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:text="@string/btnborrarTxt"
       android:onClick="borrarDatos"/>
     
</LinearLayout >

