<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.myfirstapp.IngresarEmailActivity$PlaceholderFragment" >

      <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
      
       <TextView
            android:id="@+id/tvEmail_2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tvEmailTxt"
            android:layout_alignBaseline="@+id/etEmail_2"/>
       <EditText
            android:id="@+id/etEmail_2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/etEmailTxt"
            android:layout_toRightOf="@+id/tvEmail_2"/>
       
       <TextView
            android:id="@+id/tvPassword_2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmail_2"
            android:text="@string/tvPasswordTxt"
            android:layout_alignBaseline="@+id/etPassword_2"/>
       
       <EditText
            android:id="@+id/etPassword_2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_toRightOf="@+id/tvPassword_2"
            android:layout_below="@+id/etEmail_2"/>
       
   </RelativeLayout>
   
      <Button
       android:id="@+id/btnEnviar"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:text="@string/btnenviarTxt"
       android:onClick="enviarDatos"/>
      
      <TextView
        android:id="@+id/mensajeServidor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#CC0033"
        android:textSize="16sp"
        android:textStyle="bold" />
     
</LinearLayout >
